--- a/_posts/2019-07-14-the-us-narrative-today.html
+++ b/_posts/2019-07-14-the-us-narrative-today.html
@@ -1559,107 +1559,107 @@ stories:
   domain: http://www.djc.com/
   link: https://www.djc.com/news/le/12123401.html
 images:
-- name: window-window-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-smoking-cigarette.jpg
-- name: old-gas-pumps-oldgaspumps-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-gred-mash.jpg
-- name: berlinwall-DSC-0084-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-sand-paper.jpg
-- name: downtown-los-angeles-downtown-la.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la.JPG
-- name: san-francisco-city-bridge-sf-city-bridge-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-space-pizza.jpg
-- name: dc-statue-dcstatue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue.jpg
-- name: abandonedbuildings_dry_skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dry_skin.jpg
-- name: gypsy-wagon-gypsywagon-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-space-pizza.jpg
-- name: gypsy-wagon-gypsywagon-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-pablo-blue.jpg
-- name: mistywoods-babyfoot-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-clean-view.jpg
-- name: cargo-ship-cargo-ship-on-sea-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-ww2-color.jpg
-- name: cargo-ship-cargo-ship-on-sea-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-hot-spicy.jpg
-- name: windowmountain-window-mountain-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-colorful-dream.jpg
-- name: oldcabin-store-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-aqua.jpg
-- name: bluelake-clean-view-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-clean-view-file-00-00-00-00.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-aqua.jpg
-- name: aws-s3-stories-fence-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-dark-dali.jpg
-- name: containership-containership-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-crunch-paper.jpg
-- name: oldbarn-oldbarn-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-sunday.jpg
-- name: school-clouds-church-clouds-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-space-pizza.jpg
-- name: crow_mucha_mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_mucha_mult.jpg
-- name: stories-green-gears-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-green-gears-matrix.jpg
-- name: ellis-island-ellisisland-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dark-dali.jpg
-- name: old-granary-field-granaryfield-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-colorful-blocks.jpg
-- name: downtown-los-angeles-downtown-la-mucha-mult.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-mucha-mult.JPG
-- name: rockingchair-face-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2.jpg
-- name: old-gas-pumps-oldgaspumps-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-satan-red.jpg
-- name: cargo-ship-cargo-ship-on-sea-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dry-skin.jpg
-- name: power-lines-power-lines-empty-space-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-nazi-poster.jpg
-- name: downtown-los-angeles-downtown-la-creativity.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-creativity.JPG
-- name: old-church-oldchurch-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-blue-granite.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dark-dali.jpg
-- name: oldbarn-oldbarn-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-colorful-dream.jpg
-- name: fence-fence-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dark-soul.jpg
-- name: machine-road-machine-road-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-atari-missle.jpg
-- name: fence-fence-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-crabapple.jpg
-- name: trucksilo-trucksilo-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-bright-sand.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-blue-electricity.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-electricity.JPG
-- name: ellis-island-ellis-island-room-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-nazi-poster.jpg
-- name: old-granary-field-granaryfield-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-space-pizza.jpg
-- name: mosaic-face-mosaic-face-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-circuit-3.jpg
-- name: fence-fence-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-circuit.jpg
-- name: window-window-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-blue-brush.jpg
-- name: aws-s3-stories-gears-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-gears-smoking-cigarette.jpg
-- name: old-gas-pumps-oldgaspumps-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-yellow-collage.jpg
-- name: old-cabin-oldcabin-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-neo-instinct.jpg
-- name: amusement-park-amusement-park-2-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-dream.jpg
-- name: trucksilo-trucksilo-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-gan-vogh.jpg
-- name: old-door-lock-old-door-lock-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-colored-circuits.jpg
-- name: supreme-court-supremecourt-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-colored-circuits.jpg
-- name: ellis-island-ellisisland-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-gan-vogh.jpg
+- name: ellis-island-ellis-island-room-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-yellow-collage.jpg
+- name: eduardo-eduardo-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dark-dali.jpg
+- name: razorwire-DSC-0080-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-purple-storm.jpg
+- name: subway-subway-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-atari-missle.jpg
+- name: border-crossing-bordercrossing-monet-one.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-monet-one.png
+- name: eduardo-eduardo-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-crunch-paper.jpg
+- name: server-cloud-server-racks-door-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dry-skin.jpg
+- name: ellis-island-ellis-island-room-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-cinnamon-rolls.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-yellow-paper.jpg
+- name: aws-s3-square-C3JdRtDWMAUqS6L-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C3JdRtDWMAUqS6L-square.jpg
+- name: liberty-back-statue-liberty-back-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-soul.jpg
+- name: beach-rocks-beach-rocks-currents-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-jap-wav-pr.jpg
+- name: old-school-house-old-schoolhouse-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-alien-goggles.jpg
+- name: carry-load-carryload-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dali-three.jpg
+- name: birdhouse-birdhouse-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-internet-numbers.jpg
+- name: mistywoods-babyfoot-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-blue-brush.jpg
+- name: san-francisco-city-bridge-sf-city-bridge.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge.jpg
+- name: aws-s3-square-C4NLtWrWMAAMY9d.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C4NLtWrWMAAMY9d.jpg
+- name: border-fence-border-fence-on-hill-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-purp-paper.jpg
+- name: birdhouse-birdhouse-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-ww2-dresden.jpg
+- name: downtown-trucksilo-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-kandinsky-bv.jpg
+- name: eduardo-eduardo-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-spagetti-accident.jpg
+- name: downtown-trucksilo-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-crunch-paper.jpg
+- name: miamibeach-miamibeach-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-graham-sutherland.jpg
+- name: oldcabin-store-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-cinnamon-rolls.jpg
+- name: oldroad-old-road-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-far-away.jpg
+- name: server-cloud-server-racks-door-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-really-hot.jpg
+- name: server-cloud-server-racks-door-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dali-two.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-diego-rivera1.jpg
+- name: wind-mills-windmills-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-clean-view.jpg
+- name: containership-containership-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-sand-paper.jpg
+- name: oldsmallboat-oldsmallboat-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-space-pizza.jpg
+- name: school-clouds-church-clouds-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colored-circuits.jpg
+- name: aws-s3-stories-beachclouds-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-beachclouds-clean-view.jpg
+- name: sand-hand-sand-hand-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-spagetti-accident.jpg
+- name: oldhouse-granaryfield-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-gan-vogh.jpg
+- name: oldsmallboat-oldsmallboat-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-constitution.jpg
+- name: beach-clouds-lifeguard-beachclouds-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dark-soul.jpg
+- name: trucksilo-trucksilo-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-atari-missle.jpg
+- name: white-house-lawn-white-house-lawn-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dark-soul.jpg
+- name: border-crossing-bordercrossing-emily-carr.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-emily-carr.png
+- name: nazi-invasion-IMG_7559.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7559.jpg
+- name: oldcabin-oldcabin-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-monet-one.jpg
+- name: windowmountain-window-mountain-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-kandinsky-bv.jpg
+- name: capital-battle-capitolbattle-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dark-rain.jpg
+- name: old-granary-field-granaryfield-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-satan-red.jpg
+- name: dragon-desert-desert-dragon-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-post-modern.jpg
+- name: mosaic-face-mosaic-face-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-electricity.jpg
+- name: rockingchair-rockingchair-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-hot-spicy.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-purple-storm.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-colorful-dream.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-colorful-dream.png
 ---
 Harvey Reaps Benefits This Time As Angels Top Ms Again.&nbsp;Camden Wrestlers Advance To State Meet.&nbsp;Aspen Native With Dark Past Charged With Armed Robbery.&nbsp;Like Us On Facebook.&nbsp;Eagles Are Soaring Along James River.&nbsp;Olympic Silver Medalist Stevenson Wins In Jersey Hometown.&nbsp;Man Arrested Following South Lincoln Standoff.&nbsp;Sisters Graduate To Full Status As Indian Classical Dancers.&nbsp;
